welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:11: error: type mismatch;
 found   : Unit
 required: Boolean
		if(estFaceMur && getDirection() == Direction.OUEST) {
                ^